# PersonaPlay-Multi-Agent-AI-Story-Simulation

./: .gitignore  LICENSE  README.md  blueprint_sample.yaml
backend/: .env.example  .gitignore  =2.0  agent.py  main.py  memory.py  pyproject.toml  state.py  test_lm.py  test_ws.py
backend/app/: config.py  main.py
backend/app/agents/: actor.py  beats.py  director.py  graph.py  llm.py
backend/app/api/: connection.py  routes.py  websocket.py
backend/app/api/handlers/: config.py  director.py  scene.py  turn.py
backend/app/models/: payloads.py  state.py
backend/app/services/: image.py  memory.py
backend/scenes/: road_trip.yaml
backend/tests/: test_beats.py  test_image_service.py  test_models.py
design doc/: gemini-code-1777656707353.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/feed/: MessageFeed.jsx  MessageItem.jsx
frontend/src/components/layout/: BeatBar.jsx  Topbar.jsx
frontend/src/components/modals/: ConfigModal.jsx
frontend/src/components/panels/: BackstagePanel.jsx  DirectorPanel.jsx  TheaterPanel.jsx
frontend/src/components/shared/: Badge.jsx  Toggle.jsx
frontend/src/components/stage/: Avatar.jsx  Stage.jsx
frontend/src/constants/: beats.js
frontend/src/context/: SimulationContext.jsx
frontend/src/hooks/: useSimulation.js  useTTS.js  useWebSocket.js
frontend/src/utils/: colors.js
scratch/: check_divs.py  check_divs_v2.py  check_divs_v3.py  debug_matches.py
